--- a/index.html
+++ b/index.html
@@ -100,7 +100,14 @@
         </div>
         
     </div>
-   
+   <div class="buttons">
+        <ul>
+            <li>About Us</li>
+            <li>Mission</li>
+            <li>Contact Us</li>
+        </ul><br><br>
+        
+    </div>
 </body>
 </html>
 
