--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
         </div><br>
         </div>
     <div>
-        <img class="img_2"src="ati2.jpeg" alt="atiku smiling"><br>
+        <img class="img_2"src="At2.jpeg" alt="atiku smiling"><br>
     </div>
     <div class="title_1">
         <H2 class="h2_1">ATIKU BLOCKCHAIN EDU.</H2>
